--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root {
 	/* colors */
-	--clr-primary100: hsl(257, 40%, 49%);
-	--clr-primary200: hsl(300, 69%, 71%);
+	--clr-primary100: hsl(300, 69%, 71%);
+	--clr-primary300: hsl(257, 40%, 49%);
+	--clr-bxshadow800: hsl(257, 43%, 26%);
 
 	/* fonts */
 	--ff-primary: "Open Sans", sans-serif;
@@ -17,7 +18,17 @@
 *::after {
 	box-sizing: border-box;
 }
-
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
+}
 /* Remove default margin */
 body,
 h1,
@@ -32,10 +43,10 @@ dd {
 	margin: 0;
 }
 
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role="list"],
-ol[role="list"] {
+ul {
 	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
 /* Set core root defaults */
@@ -50,26 +61,14 @@ body {
 	line-height: 1.5;
 }
 
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-	text-decoration-skip-ink: auto;
-}
-
 /* Make images easier to work with */
-img,
-picture {
+img {
 	max-width: 100%;
 	display: block;
 }
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-	font: inherit;
+a {
+	text-decoration: none;
 }
-
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
 	html:focus-within {
@@ -90,12 +89,200 @@ select {
 
 body {
 	font-family: var(--ff-primary);
+	background-color: var(--clr-primary300);
+	background-image: url(images/bg-mobile.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	color: hsl(0, 0%, 100%);
+	display: grid;
+	align-items: center;
+	overflow: hidden;
+}
+main {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 2rem 30vh auto auto;
+	grid-template-areas:
+		"header"
+		"mockup"
+		"cta"
+		"nav";
+	gap: 2.75rem;
+	padding: max(1rem, 3vw) max(1.875rem, 6vw);
+}
+
+header {
+	grid-area: header;
+	width: 35vw;
+}
+
+.mockup {
+	grid-area: mockup;
+	background-image: url(images/illustration-mockups.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 100%;
+}
+picture {
+	grid-area: mockup;
+	border: 1px solid black;
+}
+picture img {
+	background-size: auto;
+}
+
+h1 {
+	display: flex;
+	flex-direction: column;
+	font-size: clamp(1.6rem, 3vw, 3rem);
+}
+
+h1,
+.hero__cta-btn {
+	font-family: var(--ff-accent);
+}
+
+.hero__cta {
+	grid-area: cta;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.hero__cta-btn {
+	color: var(--clr-primary300);
+	background-color: white;
+	width: fit-content;
+	padding: max(2vh, 0.75rem) 5rem;
+	border-radius: 100vw;
+	box-shadow: 0px 0px 10px hsl(257deg 43% 26%);
+	font-size: 0.8rem;
+	margin-top: 0.4rem;
+	transition: 350ms ease;
+}
+
+.hero__cta-btn:hover {
+	background-color: var(--clr-primary100);
+	color: hsl(0, 0%, 100%);
+}
+
+ul {
+	display: flex;
+	justify-self: center;
+	gap: 1rem;
+	grid-area: nav;
+}
+
+li {
+	display: inline-block;
+	line-height: 1rem;
+}
+
+ion-icon {
+	color: white;
+	padding: 0.425em;
+	border: 2px solid white;
+	border-radius: 100vh;
+
+	transition: 350ms ease;
+}
+
+ion-icon:hover {
+	color: var(--clr-primary100);
+	border: 2px solid var(--clr-primary100);
+	box-shadow: 0 0 10px var(--clr-bxshadow800), 0 0 10px var(--clr-primary100);
+}
+
+/* fix to remove the tooltip ion-icon */
+ion-icon::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+footer {
+	position: absolute;
+	bottom: 0.5%;
+	width: 100%;
 }
 
 .attribution {
-	font-size: 11px;
+	font-size: 0.6875em;
+	color: hsl(0, 0%, 20%);
 	text-align: center;
 }
+
 .attribution a {
-	color: hsl(228, 45%, 44%);
+	color: hsl(0, 0%, 100%);
+}
+
+/* special to mobile */
+@media screen and (max-width: 45em) {
+	.mockup {
+		background-position: center;
+	}
+	.hero__cta {
+		text-align: center;
+		align-items: center;
+	}
+	.hero__cta p {
+		max-width: 33ch;
+		font-size: 0.9375rem;
+	}
+	.hero__cta-btn {
+		align-self: center;
+	}
+}
+
+/* large screen */
+@media screen and (min-width: 45.1em) {
+	body {
+		background-image: url(images/bg-desktop.svg);
+		background-size: cover;
+	}
+	main {
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: auto;
+		min-height: inherit;
+		grid-template-areas:
+			"header . "
+			"mockup cta"
+			". nav";
+	}
+	.hero__cta {
+		gap: 2rem;
+	}
+	h1 {
+		line-height: 1.3;
+	}
+	p,
+	.hero__cta-btn {
+		font-size: 1.125rem;
+	}
+
+	ul {
+		justify-self: end;
+	}
+	ion-icon {
+		font-size: 1.5rem;
+	}
+}
+
+/* very large screen */
+@media screen and (min-width: 90em) {
+	main {
+		grid-template-rows: 1fr 63vh auto;
+	}
+	.hero__cta {
+		padding-block-start: 3rem;
+		padding-left: 3rem;
+	}
+	.hero__cta p,
+	ul {
+		margin-right: 10rem;
+	}
+	body {
+		background-size: contain;
+	}
 }
